
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct kld_sym_lookup {int version; char* symname; scalar_t__ symvalue; } ;
typedef int ksym ;


 int KLDSYM_LOOKUP ;
 int exit (int) ;
 scalar_t__ kldsym (int ,int ,struct kld_sym_lookup*) ;
 int perror (char*) ;
 int printf (char*,char*,scalar_t__) ;

void *resolve(char *name) {
 struct kld_sym_lookup ksym;

 ksym.version = sizeof(ksym);
 ksym.symname = name;

 if(kldsym(0, KLDSYM_LOOKUP, &ksym) < 0) {
  perror("kldsym");
  exit(1);
 }

 printf("  [+] Resolved %s to %#lx\n", ksym.symname, ksym.symvalue);
 return (void *)ksym.symvalue;
}
